--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
         "jest": "^27.3.1",
         "spiced-pg": "^1.0.4",
         "supertest": "^4.0.2"
+    },
+    "devDependencies": {
+        "eslint": "^8.18.0"
     }
 }
